Added tutorial on creating and using skyboxes with Argon

--- a/_posts/2015-03-26-skybox.md
+++ b/_posts/2015-03-26-skybox.md
@@ -2,10 +2,74 @@
 layout: post
 title:  "Skybox"
 date:   2015-03-26 13:35:15
-short_description: "This tutorial shows you how to use Argon.js to implement a skybox panorama."
+short_description: "This tutorial shows you how to use Argon.js and Three.js to implement a skybox panorama."
 source_directory: tutorial3
 ---
 
-Geolocation Tutorial
+Skybox Tutorial
 --------------------
-This is a geolocation tutorial.
+By default Argon will display whatever your phone's camera is capturing as a background, and for many apps this behavior is fine or even desirable. However, in some cases you might want to use a custom backdrop for an Argon app. This tutorial will demonstrate how Argon and Three.js can be used together to render a skybox panorama in the background of an Argon app.
+
+Camera Setup
+--------------------
+To do almost any 3D rendering in Argon you will probably want to set up Three.js's camera to be bound to your phone's physical camera. This process was covered in the first tutorial, but in case you skipped that tutorial or need a refresher, here is code for binding the Three.js camera to Argon's camera information.
+
+{% highlight js %}
+
+var options = THREE.Bootstrap.createArgonOptions(ARGON.immersiveContext)
+options.renderer = { klass: THREE.CSS3DRenderer }
+var three = THREE.Bootstrap(options)
+
+three.argon.bindComponent(new ARGON.Component.CameraTarget, three.camera)
+
+var cameraLocationTarget = new ARGON.Component.CameraTarget
+cameraLocationTarget.setFilter(ARGON.filters.onlyPosition)
+
+var cameraLocation = new THREE.Object3D
+three.argon.bindComponent(cameraLocationTarget, cameraLocation)
+three.scene.add(cameraLocation)
+
+{% endhighlight %}
+
+Creating and Drawing the Panorama
+--------------------
+Once the camera is set up, rendering a skybox is fairly straightforward. There are multiple ways to render a skybox in Three.js, but this tutorial will only cover one simple method. Since a skybox is simply a cube with different textures on each face, an obvious way to create a Skybox is to use a [MeshFaceMaterial](http://threejs.org/docs/#Reference/Materials/MeshFaceMaterial), where each material corresponds to a different side of the skybox cube. The code to create a skybox using this method is shown below.
+
+{% highlight js %}
+
+//texture filenames for the panorama - depending on how the panorama was created, the ordering of each side may vary
+//obviously the filenames here are placeholders 
+var images = [
+	"image_front.png",
+	"image_back.png",
+	"image_top.png",
+	"image_bottom.png",
+	"image_left.png",
+	"image_right.png"
+]
+
+//this array will store each material
+var materials = [];
+
+for (var i = 0; i < 6; i++) {
+	//load the image for a face's material
+	var tex = new THREE.ImageUtils.loadTexture(images[i])
+	tex.onLoad = function() {
+		tex.needsUpdate = true
+	}
+
+	//notice the use of THREE.BackSide - since the camera is viewing the skybox from the inside of the cube,
+	//the back of each face must be rendered rather than the front
+	materials.push(new THREE.MeshBasicMaterial({color: 0xffffff, map: tex, side: THREE.BackSide}))
+}
+
+//create the skybox geometry and use the MeshFaceMaterial as its material
+var skybox = new THREE.Mesh(new THREE.BoxGeometry(100, 100, 100), new THREE.MeshFaceMaterial(materials));
+
+//add the cube to the scene relative to the cameraLocation Object3D so that it is guaranteed that the skybox will
+//surround the camera even if the user moves around
+cameraLocation.add(skybox)
+
+{% endhighlight %}
+
+One of the most intesting aspects of this code snippet is that the vast majority of the code is not specific to Argon. Loading the textures, creating the panorama material, and creating the actual skybox cube are all done with standard Three.js functionality. In fact, the only line that is Argon-specific is adding the skybox geometry to the Three.js scene, where the information about the user's physical location that Argon.js provides is used to ensure that the skybox will always surround the camera's position.
