--- a/_posts/2015-03-25-vuforia.md
+++ b/_posts/2015-03-25-vuforia.md
@@ -151,4 +151,4 @@ This is the function that loads the lizard model, called by the setupChips funct
 
 ## Testing the application
 
-To test the completed application, you need to print out the stones and chips images or bring them up on a computer screen. Then launch the application on your phone and put it at the images. 
+To test the completed application, you need to print out the stones and chips images or bring them up on a computer screen. Then launch the application on your phone and point it at the images. 
