Added debugging tutorial
Debugging tutorial added including the change the generator-argon is
now a jspm package

--- a/_posts/2015-04-01-periodic.md
+++ b/_posts/2015-04-01-periodic.md
@@ -232,7 +232,7 @@ function transform( targets, duration ) {
 } 
  {% endhighlight %}
  
-Finally the script calls the transform for the first time, drawing the table configuration  
+Finally the script calls the transform for the first time, drawing the table configuration:  
  {% highlight js %}
 transform( targets.table, 0 ); 
  {% endhighlight %}
