--- a/_posts/2015-04-01-periodic.md
+++ b/_posts/2015-04-01-periodic.md
@@ -6,7 +6,7 @@ short_description: "This channel demonstrates how to position content in space r
 source_directory: tutorial5
 ---
 
-This example is similar to 4-Directions. It consists of a set of divs arranged in space around the user. It is an Argon3 adaptation of the Period table example written for *three.js* (http://mrdoob.com/lab/javascript/threejs/css3d/periodictable/). The elements are arranged in four different configurations: table (flat in space in front of the user/camera), sphere (around the user), helix (around the user), and grid (around the user). This example also illustrates how to design user interaction into an Argon3 web application by placing buttons on the screen and adding event listeners for respond when the user touches a button.  
+This example is similar to 4-Directions. It consists of a set of divs arranged in space around the user. It is an Argon3 adaptation of the Periodic table example written for *three.js* (http://mrdoob.com/lab/javascript/threejs/css3d/periodictable/). The elements are arranged in four different configurations: table (flat in space in front of the user/camera), sphere (around the user), helix (around the user), and grid (around the user). This example also illustrates how to design user interaction into an Argon3 web application by placing buttons on the screen and adding event listeners that respond when the user touches a button.  
  
 ##Main file (index.html) 
  
@@ -219,7 +219,7 @@ The buttons (table, sphere, helix, grid) were defined in the body tag in index.h
  
 ##The transform function to switch the configuration 
  
-The transform function puts a copy of the position and orientation information for the target configuration into the object (the periodic table element as drawn on the scene). It then calls updateMatrix() on the object to get it redrawn. Each redrawn objects will be in the new configuration.  
+The transform function puts a copy of the position and orientation information for the target configuration into the object (the periodic table element as drawn on the scene). It then calls updateMatrix() on the object to get it redrawn. Each redrawn object will be in the new configuration.  
  {% highlight js %}
 function transform( targets, duration ) { 
   for ( var i = 0; i < objects.length; i ++ ) { 
@@ -239,5 +239,5 @@ transform( targets.table, 0 );
  
 ##Modify this code 
  
-In this example the target values are copied, which creates an instantaneous transformation for table to sphere etc. As an exercise, you could try to modify this code to make the values tween smoothly to the next configuration. The transform function above has a value as the duration parameter. You could implement code to set that value to something other than 0 to indicates how fast the tweening would take place.  
+In this example the target values are copied, which creates an instantaneous transformation from table to sphere etc. As an exercise, you could try to modify this code to make the values tween smoothly to the next configuration. The transform function above has a value as the duration parameter. You could implement code to set that value to something other than 0 to indicates how fast the tweening would take place.  
 
