--- a/_posts/2015-04-03-panorama.md
+++ b/_posts/2015-04-03-panorama.md
@@ -14,12 +14,12 @@ You can learn more about panoramas here: https://en.wikipedia.org/wiki/Panorama.
  
 ##Main file (index.html) 
  
-In the html file, we call the others scripts as usual. The body tag contains an explanation of the pano, which the user will see in Page mode 
+In the html file, we call the others scripts as usual. The body tag contains an explanation of the pano, which the user will see in Page mode.
  
  {% highlight html %}
  <body style="background-color:rgba(255,255,255,0.7)"> 
    <h2>Panorama as reality (background)</h2> 
-    <p>This example illustrate the use of a panorama as an Argon reality. The panorama appears in the background instead of the video from the camera. The panorama can be in one of two forms: it can be a single equirectangular png or jpg, 2. it can six square png or jpg panels making up a "skybox. Both types are defined in the code, but the skybox is the one that is actually displayed.This line of code sets the panorama: <br><br> panoramaReality.setPanorama(woodruffPano)<br> 
+    <p>This example illustrate the use of a panorama as an Argon reality. The panorama appears in the background instead of the video from the camera. The panorama can be in one of two forms: it can be a single equirectangular png or jpg, 2. it can six square png or jpg panels making up a "skybox. Both types are defined in the code, but the skybox is the one that is actually displayed. This line of code sets the panorama: <br><br> panoramaReality.setPanorama(woodruffPano)<br> 
    <br>In this case the panoarama is set to woodruffPano, which is skybox type. You can alter the code to use the other type by changing the line to:<br> 
     <br>panoramaReality.setPanorama(pano) 
     </P> 
@@ -49,7 +49,7 @@ cartographicDegrees: [33.7758,84.3947]
 } 
   {% endhighlight %}
   
-The headingOffset indicates where north is defined in the panorama (in degrees from 0 to 359). If the center of the pano image is north, then the headindOffset is 0, as indicated here. The variable cartographicDegrees indicates the geolocation of the Panorama: where the image was taken or where we want to represent the image as being located on the earth.  
+The headingOffset indicates where north is defined in the panorama (in degrees from 0 to 359). If the center of the pano image is north, then the headingOffset is 0, as indicated here. The variable cartographicDegrees indicates the geolocation of the Panorama: where the image was taken or where we want to represent the image as being located on the earth.  
  
 #The skybox (6 panel) panorama  
  
@@ -83,6 +83,6 @@ or
 panoramaReality.setPanorama(pano2); 
   {% endhighlight %}
   
-##Some futher hints
+##Some further hints
   
-The equirectangular version of the Argon panorama is mapped as a single texture onto the inside of a sphere using WebGL. The texture size is limited, and the limits may be different on different devices. At present, a texture of 4000x2000 seems to be a safe limit. (The aspect ratio should always be 2x1) You can achieve greater resolution using the skype box, because each of the 6 panels is a single texture mapped onto one surface of a cube. Each texture be approximately 4000x4000.  
+The equirectangular version of the Argon panorama is mapped as a single texture onto the inside of a sphere using WebGL. The texture size is limited, and the limits may be different on different devices. At present, a texture of 4000x2000 seems to be a safe limit. (The aspect ratio should always be 2x1) You can achieve greater resolution using the skype box, because each of the 6 panels is a single texture mapped onto one surface of a cube. Each texture is approximately 4000x4000.  
