--- a/_posts/2015-03-25-vuforia.md
+++ b/_posts/2015-03-25-vuforia.md
@@ -10,7 +10,7 @@ Vuforia Tutorial
 ----------------
 
  
-Vuforia is the image tracking system from Qualcomm (https://www.qualcomm.com/products/vuforia), which *argon.js* uses to recognize image from a database and register graphics in relation to the image. This tutorial shows how to use an image from a database within *argon.js*. To use this feature effectively, you need to register with Vuforia and create your own database of images. When you register with Vuforia, you will receive a key to your database. This key guarantees that only the users of your applicaitons can access your database. To use Vuforia in Argon3, you will need to insert an encrypted form of your key into your code.  
+Vuforia is the image tracking system from Qualcomm (https://www.qualcomm.com/products/vuforia), which *argon.js* uses to recognize an image from a database and register graphics in relation to the image. This tutorial shows how to use an image from a database within *argon.js*. To use this feature effectively, you need to register with Vuforia and create your own database of images. When you register with Vuforia, you will receive a key to your database. This key guarantees that only the users of your applications can access your database. To use Vuforia in Argon3, you will need to insert an encrypted form of your key into your code.  
 
 For the purposes of this tutorial example, however, we can use the standard "stones and chips" images provided by Vuforia without a developer's key.  On top of the stones image, we will place a box  that spins. On top of the chips images, we place an animated 3D graphic monster. (It looks something like a four-legged lizard  walking in place.)
 
