Edit to periodic.md

--- a/_posts/2015-04-01-periodic.md
+++ b/_posts/2015-04-01-periodic.md
@@ -239,5 +239,5 @@ transform( targets.table, 0 );
  
 ##Modify this code 
  
-In this example the target values are copied, which creates an instantaneous transformation from table to sphere etc. As an exercise, you could try to modify this code to make the values tween smoothly to the next configuration. The transform function above has a value as the duration parameter. You could implement code to set that value to something other than 0 to indicates how fast the tweening would take place.  
+In this example the target values are copied, which creates an instantaneous transformation from table to sphere etc. As an exercise, you could try to modify this code to make the values tween smoothly to the next configuration. The transform function above has a value as the duration parameter. You could implement code to set that value to something other than 0 to indicate how fast the tweening would take place.  
 
