update vuforia tutorial with encryption information

--- a/_posts/2015-03-25-vuforia.md
+++ b/_posts/2015-03-25-vuforia.md
@@ -52,9 +52,8 @@ var pointLight = new THREE.PointLight( 0xffffff, 1.5, 1000 ) three.camera.add(po
 
 ##The license key 
  
-Then we initialize Vuforia with a license key. If the developer is using his or her own database, then the encrypted licenseKey would go here. We put null and default to the Vuforia chips and stones image. 
-
- {% highlight js %}
+Then we initialize Vuforia with a license key. If the developer is using his or her own database, then the encrypted licenseKey would go here (see the end of this tutorial for how to do this). We put null and default to the Vuforia chips and stones image. 
+{% highlight js %}
   Argon.Vuforia.initialize({ 
     licenseKey: null, 
     startCamera: true, 
@@ -152,3 +151,66 @@ This is the function that loads the lizard model, called by the setupChips funct
 ## Testing the application
 
 To test the completed application, you need to print out the stones and chips images or bring them up on a computer screen. Then launch the application on your phone and point it at the images. 
+
+## Advanced: Creating an encrypted license key file
+
+To use your own Vuforia targets, you must create your own Vuforia license key on their website, and use it when initializing Vuforia in argon.js.  
+
+Since any file you put on a web server could potentially be copied by anyone with access to that server, argon.js requires that you store the license key in an encrypted JSON file.  The license should be in the *key* field in the JSON, as a string.
+
+In addition, since you don't want anyone else to simply copy and that encrypted file, argon.js also requires you to store a set of url pattern's in the encrypted file, representing valid urls from which the key can be used. The url patterns should be in the *urls* field in the JSON, as an array of strings.
+
+The format of the encrypted file is:  
+{% highlight %}
+{
+   "key": " ---- YOUR VUFORIA LICENSE KEY HERE ---",
+   "urls": ["^http://www.yourfullyqualifieddomain.com/", 
+	  "^http[s]?://[A-Za-z0-9-.]*.yourdomainprefix.com/", 
+	  "^http[s]?://[A-Za-z0-9-.]*.yourdomainprefix.com/partial/url/"]
+}
+{% endhighlight %}
+
+To encrypt the file, you should encrypt it for the user *secure@argonjs.io*, using PGP.  There are both commercial and free PGP implementations that can be used;  we use [https://gpgtools.org] on MacOSX.  With GPGTools installed, fetch the public key for *secure@argonjs.io* using the "GPG Keychain" application, and then encrypt a file containing your JSON using *secure@argonjs.io* as the receipient.  Do not sign or encrypt the file with a password.
+
+The easiest way to store the encrypted file is in a text tag in your HTML file, as follows:
+{% highlight %}
+<script id="license" type="text/plain">-----BEGIN PGP MESSAGE-----
+Comment: GPGTools - https://gpgtools.org
+
+hQIMA47tt+RhMWHyARAAytTjlCY9COkseZb/73Z5g9m8nBuuX2XPlg/RlUHS15UD
+DTPP5X4lrNGSkG8NW8ET+KQjIao1DVCehG9UTeK7DV0ShLem5BmxLkmo6ihiXpr/
+QK7hqykkmf3A+n5xHzx7dmfLUny5OcFjfUN16WRHGvkm7WWxGpDL/ukcpuHJuL9g
+G96EX+FQZESUK8ScC5Hboh7bDVozjAsVqsb3sSivQlenrjTWZX80aaGU6Sef9lfF
+m2S/I144qK15L/drylt7XacPZ+yCuKZ3NhpUnsI2d76iPsf3zWzump0xGXU1b9M9
+ZwUFOjBxOQsz0i0QiIZXLRnu3soIeL3SoXrlJwD1c4oyLtR2AFeJ4ZdMqs+uNswf
+mk0Y0vtkkmfWzZyl44tqkMvd5m/O2OgPvPH/Oh4f2LoCwDl0SWtNMfuscmh5ryIX
+7FPZs47x/QrdzbzqLhs73xj8LLCtVHaMYehaf8kf5QEqRCZdDvk73/zI3XN0nkDU
+Iu8G08AdfPDiLeyz/OoUEbnH+ph8tY1/+gZ5BH47VMUaRjnUSdAsMdczPyh7L8WI
+OG8SU7aj+7S8NTBmu69OIBoq77QWl4zCSisnPzfNfaDoax4OOCuwz3TxETVlr9Ww
+f51yeLrR+RqWDonrGNJ4RuuE8ZQVuojBkBdlaHYEPn6+Fr7efQkGaLew7efCQjfS
+wPwBu650+pihgPELveEyqXar68BHl+CMR4RpGGQOp6GAoKMcZpUAed8m0Tg5ZU2y
+DUj9KPrQ1bX6fyxW2RgdJmIGi6926lv3sL93xuXKPBmcA+2bIqPw0vmELG2NgrJQ
+7CYd80IDWzBmngIkh8kFEZrkL+RSciJ9/NEauVBrNxFNUYGTY6l1f9AyHqmwschd
+G9FnldNskH8UDtowbDHcz0OoHYnP/TLI9PQft1aHFA/WBg6oYv2Nrnb1/GdYE5JE
+xpgganPTMcxPs5Ch6XVPIRIZsCJ9aVqSmUpgCEECoDWmvVLABN5EoTHr3rIedSqN
+/7F1o3bmXrcNV3AqlLQcU/RXeaKxeUPAsLJ99ELb7dZO53pLaUAeqQzLtTO8t/Gd
+f7Y7uUVl6gRqyBbWaXpsvhiYb1aAsN8ddOo2RYKDQ/YNF5+A2H0cGFCDItK70DhV
+nXb5GpWDP+6pioBIDbBWDebixrqh5Q/SC+C8bv7wyA+r1GyyCUX6rBB3b9P5sPiv
+oPYi64cpRfve6rkR4yDJhSQRTFsFcE9MHotWt1NeNSSURoujC2JIcQCoK4tYn+xr
+IDLFqt+xPYz/zzgfuAA=
+=kqis
+-----END PGP MESSAGE-----
+</script>
+{% endhighlight %}
+Do not put any extra space at the beginning or end of the text tag, and to not reformat the file.
+
+Now, to use this key in your code, get the contents of the HTML text element and pass it to the *Argon.Vuforia.initialize* method as the *encryptedLicenseData* parameter (instead of passing *null* to *licenseKey* above). 
+{% highlight js %}
+  var encryptedData = document.getElementById("license").text;
+
+  // initialize Vuforia with our licencse key
+  Argon.Vuforia.initialize({
+     encryptedLicenseData: encryptedData,
+     startCamera: true,
+  })
+{% endhighlight %}
