changed encrypted file

--- a/_posts/2015-03-25-vuforia.md
+++ b/_posts/2015-03-25-vuforia.md
@@ -177,28 +177,23 @@ The easiest way to store the encrypted file is in a text tag in your HTML file, 
 <script id="license" type="text/plain">-----BEGIN PGP MESSAGE-----
 Comment: GPGTools - https://gpgtools.org
 
-hQIMA47tt+RhMWHyARAAytTjlCY9COkseZb/73Z5g9m8nBuuX2XPlg/RlUHS15UD
-DTPP5X4lrNGSkG8NW8ET+KQjIao1DVCehG9UTeK7DV0ShLem5BmxLkmo6ihiXpr/
-QK7hqykkmf3A+n5xHzx7dmfLUny5OcFjfUN16WRHGvkm7WWxGpDL/ukcpuHJuL9g
-G96EX+FQZESUK8ScC5Hboh7bDVozjAsVqsb3sSivQlenrjTWZX80aaGU6Sef9lfF
-m2S/I144qK15L/drylt7XacPZ+yCuKZ3NhpUnsI2d76iPsf3zWzump0xGXU1b9M9
-ZwUFOjBxOQsz0i0QiIZXLRnu3soIeL3SoXrlJwD1c4oyLtR2AFeJ4ZdMqs+uNswf
-mk0Y0vtkkmfWzZyl44tqkMvd5m/O2OgPvPH/Oh4f2LoCwDl0SWtNMfuscmh5ryIX
-7FPZs47x/QrdzbzqLhs73xj8LLCtVHaMYehaf8kf5QEqRCZdDvk73/zI3XN0nkDU
-Iu8G08AdfPDiLeyz/OoUEbnH+ph8tY1/+gZ5BH47VMUaRjnUSdAsMdczPyh7L8WI
-OG8SU7aj+7S8NTBmu69OIBoq77QWl4zCSisnPzfNfaDoax4OOCuwz3TxETVlr9Ww
-f51yeLrR+RqWDonrGNJ4RuuE8ZQVuojBkBdlaHYEPn6+Fr7efQkGaLew7efCQjfS
-wPwBu650+pihgPELveEyqXar68BHl+CMR4RpGGQOp6GAoKMcZpUAed8m0Tg5ZU2y
-DUj9KPrQ1bX6fyxW2RgdJmIGi6926lv3sL93xuXKPBmcA+2bIqPw0vmELG2NgrJQ
-7CYd80IDWzBmngIkh8kFEZrkL+RSciJ9/NEauVBrNxFNUYGTY6l1f9AyHqmwschd
-G9FnldNskH8UDtowbDHcz0OoHYnP/TLI9PQft1aHFA/WBg6oYv2Nrnb1/GdYE5JE
-xpgganPTMcxPs5Ch6XVPIRIZsCJ9aVqSmUpgCEECoDWmvVLABN5EoTHr3rIedSqN
-/7F1o3bmXrcNV3AqlLQcU/RXeaKxeUPAsLJ99ELb7dZO53pLaUAeqQzLtTO8t/Gd
-f7Y7uUVl6gRqyBbWaXpsvhiYb1aAsN8ddOo2RYKDQ/YNF5+A2H0cGFCDItK70DhV
-nXb5GpWDP+6pioBIDbBWDebixrqh5Q/SC+C8bv7wyA+r1GyyCUX6rBB3b9P5sPiv
-oPYi64cpRfve6rkR4yDJhSQRTFsFcE9MHotWt1NeNSSURoujC2JIcQCoK4tYn+xr
-IDLFqt+xPYz/zzgfuAA=
-=kqis
+hQIMA47tt+RhMWHyAQ/8Dq0iFIgfZcTpihTvSFcQXGd3ioDdTv+pwhUvmwq8kYhg
+TwsQzC4U8zV8P62gNFkfFTRM78o19QoxOM1Jpsy6lqwkFNv7a31BFy/tSa2s9GYw
+D+NbNX5vTjYrxILa7BEha4sS38P6J4/RQ0neIyOa01y7qjs/6il49DTZPPc5SIMA
+/V5VkRJQPINR5fUFleInxgwWOjmMSl+dGGEsnxI8wbL2pbdzSs3sqwKigybLjTIg
+XkrkF49FEjuyD7u5Jw2OIPkdYiSGeYJB5HArWzLgZen9EcvZUqOIYYzCbjAULZFF
+2rAXR2wvkmizEp8jPuVe43xrnmw3LGE94IkDyktQ6IFD5PwM2j88gH0th6+OD9UR
+klR5BzIQmdgksC1h63+D+LQNoLDtVrOCQ1x69uQSkBLurDVJSW/RMPIhyMk6lGtF
+cFBhkVXbY9jZ9rFXEAYCdvMUkaiDcxI1eZJxI/IGpOawAuXrNfpRl1iOlB9/Egfc
+HaMexrnQXwsioUjZKDlwxtZKRS//BvUFJuhNV9kYk3ToZ7DBGKRJem1D1MhJ26C4
+MWHgOqJ4hMtW7BkOVD7fwKSms+lgYgoHhhWypvRzUGXelo0pSGJWKauo8/tokNFv
+3yDy+lzzwOi/tUglFID/xa/HT7J3Its1PStMuYZah7Z7K0sqZ3s9C/bK7Pdn8rLS
+wBoBJCdUGJqjLA63tThhoLM6zRAR8A+4QCrQL8yNf5RkWztmGo+7c+y6C0I01dAU
+pYL95kQelEG9lb3UOsby0uACZAQ1KzZ9hEhglWY4JoGlrYayctMO5gYAUSHYoaGv
+Rt7am1wGKCH/owsD2LRf3aL4DkN+Z5HUnHWYPuBLyFuTyMVF/rzsTQrut6BNR41V
+2JqVh6kkFY7AEBC+yLhSDPoCxsC4Sem2jnqUf1iTsq7fYDFfLcRo3IwjK8qBiZrY
+udIn90/G9Zrk9Z026rC4+4QA1MfLKxDm72cbaA==
+=jWhj
 -----END PGP MESSAGE-----
 </script>
 {% endhighlight %}
