fixed highlight tags

--- a/_posts/2015-03-25-vuforia.md
+++ b/_posts/2015-03-25-vuforia.md
@@ -161,7 +161,7 @@ Since any file you put on a web server could potentially be copied by anyone wit
 In addition, since you don't want anyone else to simply copy and that encrypted file, argon.js also requires you to store a set of url pattern's in the encrypted file, representing valid urls from which the key can be used. The url patterns should be in the *urls* field in the JSON, as an array of strings.
 
 The format of the encrypted file is:  
-{% highlight %}
+{% highlight json %}
 {
    "key": " ---- YOUR VUFORIA LICENSE KEY HERE ---",
    "urls": ["^http://www.yourfullyqualifieddomain.com/", 
@@ -173,7 +173,7 @@ The format of the encrypted file is:
 To encrypt the file, you should encrypt it for the user *secure@argonjs.io*, using PGP.  There are both commercial and free PGP implementations that can be used;  we use [https://gpgtools.org] on MacOSX.  With GPGTools installed, fetch the public key for *secure@argonjs.io* using the "GPG Keychain" application, and then encrypt a file containing your JSON using *secure@argonjs.io* as the receipient.  Do not sign or encrypt the file with a password.
 
 The easiest way to store the encrypted file is in a text tag in your HTML file, as follows:
-{% highlight %}
+{% highlight html %}
 <script id="license" type="text/plain">-----BEGIN PGP MESSAGE-----
 Comment: GPGTools - https://gpgtools.org
 
