--- a/_posts/2015-03-25-vuforia.md
+++ b/_posts/2015-03-25-vuforia.md
@@ -152,15 +152,15 @@ This is the function that loads the lizard model, called by the setupChips funct
 
 To test the completed application, you need to print out the stones and chips images or bring them up on a computer screen. Then launch the application on your phone and point it at the images. 
 
-## Advanced: Creating an encrypted license key file
+## Creating an encrypted license key file
 
-To use your own Vuforia targets, you must create your own Vuforia license key on their website, and use it when initializing Vuforia in argon.js.  
+To use your own Vuforia targets, you must create your own Vuforia license key on the Vuforia website, and use it when initializing Vuforia in argon.js.  
 
 Since any file you put on a web server could potentially be copied by anyone with access to that server, argon.js requires that you store the license key in an encrypted JSON file.  The license should be in the *key* field in the JSON, as a string.
 
-In addition, since you don't want anyone else to simply copy and that encrypted file, argon.js also requires you to store a set of url pattern's in the encrypted file, representing valid urls from which the key can be used. The url patterns should be in the *urls* field in the JSON, as an array of strings.
+In addition, since you don't want anyone else to simply copy and that encrypted file, argon.js also requires you to store a set of url pattern's in the encrypted file, representing valid urls from which the key can be used. The url patterns should be in the *urls* field in the JSON, as an array of regular expression strings.
 
-The format of the encrypted file is:  
+The format of the encrypted file, with some examples of possible url patterns, is:  
 {% highlight json %}
 {
    "key": " ---- YOUR VUFORIA LICENSE KEY HERE ---",
@@ -170,7 +170,7 @@ The format of the encrypted file is:
 }
 {% endhighlight %}
 
-To encrypt the file, you should encrypt it for the user *secure@argonjs.io*, using PGP.  There are both commercial and free PGP implementations that can be used;  we use [https://gpgtools.org] on MacOSX.  With GPGTools installed, fetch the public key for *secure@argonjs.io* using the "GPG Keychain" application, and then encrypt a file containing your JSON using *secure@argonjs.io* as the receipient.  Do not sign or encrypt the file with a password.
+To encrypt the file, you should encrypt it for the user *secure@argonjs.io*, using PGP.  There are both commercial and free PGP implementations that can be used;  we use (https://gpgtools.org) on MacOSX.  With GPGTools installed, fetch the public key for *secure@argonjs.io* using the "GPG Keychain" application, and then encrypt a file containing your JSON using *secure@argonjs.io* as the receipient.  Do not sign or encrypt the file with a password.
 
 The easiest way to store the encrypted file is in a text tag in your HTML file, as follows:
 {% highlight html %}
