more small fixes to markdown links

--- a/_posts/2015-03-25-vuforia.md
+++ b/_posts/2015-03-25-vuforia.md
@@ -10,7 +10,7 @@ Vuforia Tutorial
 ----------------
 
  
-Vuforia is the image tracking system from Qualcomm https://www.qualcomm.com/products/vuforia, which *argon.js* uses to recognize an image from a database and register graphics in relation to the image. This tutorial shows how to use an image from a database within *argon.js*. To use this feature effectively, you need to register with Vuforia and create your own database of images. When you register with Vuforia, you will receive a key to your database. This key guarantees that only the users of your applications can access your database. To use Vuforia in Argon3, you will need to insert an encrypted form of your key into your code.  
+Vuforia is the image tracking system from Qualcomm [Vuforia](https://www.qualcomm.com/products/vuforia), which *argon.js* uses to recognize an image from a database and register graphics in relation to the image. This tutorial shows how to use an image from a database within *argon.js*. To use this feature effectively, you need to register with Vuforia and create your own database of images. When you register with Vuforia, you will receive a key to your database. This key guarantees that only the users of your applications can access your database. To use Vuforia in Argon3, you will need to insert an encrypted form of your key into your code.  
 
 For the purposes of this tutorial example, however, we can use the standard "stones and chips" images provided by Vuforia without a developer's key.  On top of the stones image, we will place a box  that spins. On top of the chips images, we place an animated 3D graphic monster. (It looks something like a four-legged lizard  walking in place.)
 
@@ -36,7 +36,7 @@ We start with the standard setup. We are using the immersive context (the camera
 {% endhighlight %}
 
 
-We add light to our scene, because we will have a 3D object that needs to be lighted. These are three.js objects and methods, which you can find documented at http://threejs.org/docs/: 
+We add light to our scene, because we will have a 3D object that needs to be lighted. These are three.js objects and methods, which you can find documented at [http://threejs.org/docs/](http://threejs.org/docs/): 
 
 {% highlight js %}
 var light = new THREE.DirectionalLight( 0xffffff, 1 light.position.set( 0, -4, -4 ).normalize();
@@ -170,7 +170,7 @@ The format of the encrypted file, with some examples of possible url patterns, i
 }
 {% endhighlight %}
 
-To encrypt the file, you should encrypt it for the user *secure@argonjs.io*, using PGP.  There are both commercial and free PGP implementations that can be used;  we use (https://gpgtools.org) on MacOSX.  With GPGTools installed, fetch the public key for *secure@argonjs.io* using the "GPG Keychain" application, and then encrypt a file containing your JSON using *secure@argonjs.io* as the receipient.  Do not sign or encrypt the file with a password.
+To encrypt the file, you should encrypt it for the user *secure@argonjs.io*, using PGP.  There are both commercial and free PGP implementations that can be used;  we use [GPG Tools](https://gpgtools.org) on MacOSX.  With GPGTools installed, fetch the public key for *secure@argonjs.io* using the "GPG Keychain" application, and then encrypt a file containing your JSON using *secure@argonjs.io* as the receipient.  Do not sign or encrypt the file with a password.
 
 The easiest way to store the encrypted file is in a text tag in your HTML file, as follows:
 {% highlight html %}
