more vuforia tutorial fixes

--- a/_posts/2015-03-25-vuforia.md
+++ b/_posts/2015-03-25-vuforia.md
@@ -158,21 +158,21 @@ To use your own Vuforia targets, you must create your own Vuforia license key on
 
 Since any file you put on a web server could potentially be copied by anyone with access to that server, argon.js requires that you store the license key in an encrypted JSON file.  The license should be in the *key* field in the JSON, as a string.
 
-In addition, since you don't want anyone else to simply copy and that encrypted file, argon.js also requires you to store a set of url pattern's in the encrypted file, representing valid urls from which the key can be used. The url patterns should be in the *urls* field in the JSON, as an array of regular expression strings.
+In addition, since you don't want anyone else to simply copy and your Vuforia tracking datasets or your encrypted license, argon.js also requires you to store a set of url pattern's in the encrypted file, representing valid urls for Vuforia datasets that can be used with this key. The url patterns should be in the *urls* field in the JSON, as an array of regular expression strings.
 
-The format of the encrypted file, with some examples of possible url patterns, is:  
+The format of the encrypted file, with some examples of possible url patterns for the Vuforia dataset files, is:  
 {% highlight json %}
 {
-   "key": " ---- YOUR VUFORIA LICENSE KEY HERE ---",
-   "urls": ["^http://www.yourfullyqualifieddomain.com/", 
-	  "^http[s]?://[A-Za-z0-9-.]*.yourdomainprefix.com/", 
-	  "^http[s]?://[A-Za-z0-9-.]*.yourdomainprefix.com/partial/url/"]
+   "key": "---- YOUR VUFORIA LICENSE KEY HERE ---",
+   "urls": ["^http://www.yourfullyqualifieddomain.com/.*", 
+	  "^http[s]?://[A-Za-z0-9-.]*.yourdomain.com/.*", 
+	  "^http[s]?://[A-Za-z0-9-.]*.yourdomain.com/directory/to/limit/url/.*"]
 }
 {% endhighlight %}
 
 To encrypt the file, you should encrypt it for the user *secure@argonjs.io*, using PGP.  There are both commercial and free PGP implementations that can be used;  we use [GPG Tools](https://gpgtools.org) on MacOSX.  With GPGTools installed, fetch the public key for *secure@argonjs.io* using the "GPG Keychain" application, and then encrypt a file containing your JSON using *secure@argonjs.io* as the receipient.  Do not sign or encrypt the file with a password.
 
-The easiest way to store the encrypted file is in a text tag in your HTML file, as follows:
+The easiest way to store the encrypted file is in a script element as type "text/plain" in your HTML file, as follows:
 {% highlight html %}
 <script id="license" type="text/plain">-----BEGIN PGP MESSAGE-----
 Comment: GPGTools - https://gpgtools.org
@@ -197,9 +197,9 @@ udIn90/G9Zrk9Z026rC4+4QA1MfLKxDm72cbaA==
 -----END PGP MESSAGE-----
 </script>
 {% endhighlight %}
-Do not put any extra space at the beginning or end of the text tag, and to not reformat the file.
+Do not put any extra space at the beginning or end of the script element contents, and do not reformat the text.
 
-Now, to use this key in your code, get the contents of the HTML text element and pass it to the *Argon.Vuforia.initialize* method as the *encryptedLicenseData* parameter (instead of passing *null* to *licenseKey* above). 
+Now, to use this key in your code, get the contents of the script element and pass it to the *Argon.Vuforia.initialize* method as the *encryptedLicenseData* parameter (instead of passing *null* to *licenseKey* above). 
 {% highlight js %}
   var encryptedData = document.getElementById("license").text;
 
@@ -209,3 +209,5 @@ Now, to use this key in your code, get the contents of the HTML text element and
      startCamera: true,
   })
 {% endhighlight %}
+
+Once Vuforia is initialized, it will 
